<resources>
    <string name="app_name">Fruit MasterMind</string>
    <string name="welcome_to_the_game">Welcome to the game !</string>
    <string name="start">Start</string>
    <string name="scores">Scores</string>
    <string name="quit">Quit</string>
    <string name="score">Score :</string>
    <string name="editScore">0</string>
    <string name="attempts_left">Attempts left :</string>
    <string name="home_text">Home</string>
    <string name="text_clue1">clue1</string>
    <string name="clue2">Clue2</string>
    <string name="clue2Indice1">indice1</string>
    <string name="clue2Indice2">indice2</string>
    <string name="clue2Indice3">indice3</string>
    <string name="clue2Indice4">indice4</string>
    <string name="clue1Indice1">indice1</string>
    <string name="clue1Indice2">indice2</string>
    <string name="clue1Indice3">indice3</string>
    <string name="clue1Indice4">indice4</string>
    <string name="_10">10</string>
</resources>