<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    >

    <ImageView
        style="@style/backgroundImageGame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:ignore="ContentDescription" />

    <!-- First Line -->
    <LinearLayout
        android:id="@+id/layout_topMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <!-- Score -->
        <TextView
            style="@style/myStyleGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:text="@string/score"
            />

        <EditText
            style="@style/myStyleHome"
            android:id="@+id/resultScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editScore"/>

        <!-- Attempts left -->
        <TextView
            style="@style/myStyleGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attempts_left"
            android:layout_marginLeft="10dp"/>

        <TextView
            style="@style/myStyleHome"
            android:id="@+id/attemptsLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green_dark"
            android:text="@string/_10"/>


        <!-- Home -->
        <Button
            style="@style/myStyleHome"
            android:id="@+id/homeMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goHome"
            android:layout_marginLeft="60dp"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/home_text"/>
    </LinearLayout>

    <!--RECYCLER VIEW-->
    <RelativeLayout
        android:id="@+id/notatest"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/layout_topMenu"

        >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/layout_listOfTries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >



    </androidx.recyclerview.widget.RecyclerView>
    </RelativeLayout>

    <!-- Winning Response -->
    <LinearLayout
        android:id="@+id/layout_finalResult"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgFruit1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            style="@style/marginImage"
            android:src="@drawable/bananas"/>

        <ImageView
            android:id="@+id/imgFruit2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            style="@style/marginImage"
            android:src="@drawable/kiwi"/>

        <ImageView
            android:id="@+id/imgFruit3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/marginImage"
            android:scaleType="fitXY"
            android:src="@drawable/plum"/>

        <ImageView
            android:id="@+id/imgFruit4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/marginImage"
            android:scaleType="fitXY"
            android:src="@drawable/strawberry"/>

    </LinearLayout>

    <!-- clues viewer -->
    <!-- Clue 1 -->

    <RelativeLayout
        android:id="@+id/layout_playerChoice_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/notatest"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/layout_clue1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1,2,3"
            android:visibility="invisible"
            android:layout_marginBottom="5dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:gravity="center"
                android:background="@drawable/border">

                <TextView
                    style="@style/StyleClue"
                    android:id="@+id/clue1Indice1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="@string/clue1Indice1" />

                <TextView
                    style="@style/StyleClue"
                    android:id="@+id/clue1Indice2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="@string/clue1Indice2" />

                <TextView
                    style="@style/StyleClue"
                    android:id="@+id/clue1Indice3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="2"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="@string/clue1Indice3" />

                <TextView
                    style="@style/StyleClue"
                    android:id="@+id/clue1Indice4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="3"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="@string/clue1Indice4" />
            </TableRow>
        </TableLayout>

        <!-- Clue 2 -->
        <TableLayout
            android:id="@+id/layout_clue2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_clue1"
            android:stretchColumns="0,1,2,3"
            android:visibility="invisible"
            android:layout_marginBottom="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/border">

                <TextView
                    style="@style/StyleClue"
                    android:id="@+id/clue2Indice1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="@string/clue2Indice1" />

                <TextView
                    style="@style/StyleClue"
                    android:id="@+id/clue2Indice2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="@string/clue2Indice2" />

                <TextView
                    style="@style/StyleClue"
                    android:id="@+id/clue2Indice3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="2"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="@string/clue2Indice3" />

                <TextView
                    style="@style/StyleClue"
                    android:id="@+id/clue2Indice4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="3"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="@string/clue2Indice4" />
            </TableRow>
        </TableLayout>




        <LinearLayout
            android:id="@+id/layout_playerChoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_clue2"
            android:background="@drawable/broder_layout"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageButton
                android:id="@+id/Fruit1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:src="@drawable/question_color" />

            <ImageButton
                android:id="@+id/Fruit2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:src="@drawable/question_color" />

            <ImageButton
                android:id="@+id/Fruit3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:src="@drawable/question_color" />

            <ImageButton
                android:id="@+id/Fruit4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:src="@drawable/question_color" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_submitReset"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/layout_playerChoice"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonValidate"
                style="@style/myStyleHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/green_light"
                android:text="Validate" />

            <Button
                android:id="@+id/buttonReset"
                style="@style/myStyleHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/green_light"
                android:text="Reset" />

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>